@@ -126,7 +126,14 @@ enum LIBEVTX_VALUE_TYPES
 	LIBEVTX_VALUE_TYPE_HEXADECIMAL_INTEGER_64BIT		= 0x15,
 
 	LIBEVTX_VALUE_TYPE_BINARY_XML				= 0x21,
+
+	LIBEVTX_VALUE_TYPE_ARRAY_OF_STRING_UTF16		= 0x81,
+	LIBEVTX_VALUE_TYPE_ARRAY_OF_STRING_BYTE_STREAM		= 0x82,
+
+	LIBEVTX_VALUE_TYPE_ARRAY_OF_NT_SECURITY_IDENTIFIER	= 0x93
 };
+
+#define LIBEVTX_VALUE_TYPE_ARRAY				0x80
 
 /* The record flags
  */
