@@ -82,7 +82,7 @@ int libevtx_record_values_initialize(
 		goto on_error;
 	}
 	if( memory_set(
-	     ( *record_values ),
+	     *record_values,
 	     0,
 	     sizeof( libevtx_record_values_t ) ) == NULL )
 	{
@@ -153,6 +153,104 @@ int libevtx_record_values_free(
 		*record_values = NULL;
 	}
 	return( result );
+}
+
+/* Clones the record values
+ * Returns 1 if successful or -1 on error
+ */
+int libevtx_record_values_clone(
+     libevtx_record_values_t **destination_record_values,
+     libevtx_record_values_t *source_record_values,
+     libcerror_error_t **error )
+{
+	static char *function = "libevtx_record_values_free";
+
+	if( destination_record_values == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid destination record values.",
+		 function );
+
+		return( -1 );
+	}
+	if( *destination_record_values != NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+		 LIBCERROR_RUNTIME_ERROR_VALUE_ALREADY_SET,
+		 "%s: invalid destination record values value already set.",
+		 function );
+
+		return( -1 );
+	}
+	if( source_record_values == NULL )
+	{
+		*destination_record_values = NULL;
+
+		return( 1 );
+	}
+	*destination_record_values = memory_allocate_structure(
+	                              libevtx_record_values_t );
+
+	if( *destination_record_values == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_MEMORY,
+		 LIBCERROR_MEMORY_ERROR_INSUFFICIENT,
+		 "%s: unable to create destination record values.",
+		 function );
+
+		goto on_error;
+	}
+	if( memory_copy(
+	     *destination_record_values,
+	     source_record_values,
+	     sizeof( libevtx_record_values_t ) ) == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_MEMORY,
+		 LIBCERROR_MEMORY_ERROR_COPY_FAILED,
+		 "%s: unable to copy record values.",
+		 function );
+
+		goto on_error;
+	}
+	( *destination_record_values )->xml_document = NULL;
+
+	if( source_record_values->xml_document != NULL )
+	{
+		if( libevtx_binary_xml_document_clone(
+		     &( ( *destination_record_values )->xml_document ),
+		     source_record_values->xml_document,
+		     error ) != 1 )
+		{
+			libcerror_error_set(
+			 error,
+			 LIBCERROR_ERROR_DOMAIN_RUNTIME,
+			 LIBCERROR_RUNTIME_ERROR_INITIALIZE_FAILED,
+			 "%s: unable to create destination XML document.",
+			 function );
+
+			goto on_error;
+		}
+	}
+	return( 1 );
+
+on_error:
+	if( *destination_record_values != NULL )
+	{
+		memory_free(
+		 *destination_record_values );
+
+		*destination_record_values = NULL;
+	}
+	return( -1 );
 }
 
 /* Reads the record values header
