@@ -3,6 +3,7 @@ TODO
   - complete reading event records on demand with XML document
 * evtxeport:
   - rewrite using evtexport
+  - export format: xml
 * add recovery scan
 * combine binary xml value subsitution code into single function?
 * add debug function for binary XML token types
@@ -14,6 +15,11 @@ TODO
 
 Recovery:
 * scan for records in chunk free space
+
+20120414
+* worked on API
+* worked on parsing binary XML
+  - added support for array types
 
 20120413
 * worked on evtxexport
